# TFM_VIU_09MIAR

./: .gitignore  README.md  actualizar_reports.sh  lanzar_panelv2.sh
agarre_inteligente/: .gitignore  Guia actualización TFM.md  README.md  REENTRENAMIENTO_2026_03_07.md  bootstrap.sh  check_project.sh  check_python_deps.sh  check_system.sh  monitor_training.sh  project_status.sh  reevaluate_all.py  regenerate_best_epoch_summaries.py  requirements.txt  test_2_epochs.py  test_evaluator_fix.py  test_quick.py  test_trainer_minimal.py
agarre_inteligente/config/: default.yaml  exp1_simple_rgb.yaml  exp2_simple_rgbd.yaml  exp3_resnet18_rgb_augment.yaml  exp4_resnet18_rgbd.yaml
agarre_inteligente/data/: README.md
agarre_inteligente/docs/: API.md  DATASET_SETUP.md  EXPERIMENTS.md  REGISTRO_RECONSTRUCCION.md  TRAZABILIDAD_TFM.md
agarre_inteligente/experiments/: README.md
agarre_inteligente/graspnet/: __init__.py
agarre_inteligente/models/: README.md
agarre_inteligente/scripts/: benchmark_latency.py  download_cornell.sh  evaluate.py  generar_ilustraciones_tfm_5_1.py  generate_all_plots.py  generate_figures.py  generate_qualitative_overlays.py  generate_result_plots.py  generate_synthetic_cornell.py  generate_tables.py  generate_tfm_chapter_reports.py  predict.py  prepare_cornell_csv.py  regenerar_ilustraciones_5_8_5_10.py  regenerate_tfm_block.sh  run_experiment.py  select_best_epoch.py  summarize_results.py  train.py  validate_artifacts.py
agarre_inteligente/src/: __init__.py
agarre_inteligente/tests/: __init__.py
agarre_ros2_ws/: .gitignore  BUILD_AND_RUN.sh  CHECKLIST_2026_03_10.md  Makefile  README.md  SESSION_SUMMARY_2026_03_10.md  TOMORROW_INSTRUCTIONS.md  preflight_report_1773619167.txt  pytest.ini  requirements-dev.txt  ruff.toml  test_automation.py  test_automation.sh  test_automation_v2.py  test_camera_auto_reconnect.py  test_panel_settings_infer_roi.py  test_panel_tfm_module_artifacts.py  test_panel_ui_state_tfm.py  test_remote_object_selection.py  test_tfm_preprocessed_decode.py  test_tfm_rgbd_runtime.py  validate_phase1_1773619180.txt
agarre_ros2_ws/scripts/: 01_install_ros2_jazzy.sh  01_preflight_check.sh  01_run_all_preflight.sh  01_validate_installation.sh  PHASE1_README.md  bench_infer_log.py  bridge_cameras.yaml  check_qt_env.sh  ci_local.sh  diag_gazebo_camera_ctrl.sh  diag_startup_health.sh  diag_tf_tcp.sh  evidence_startup_ready.sh  fastdds_no_shm.xml  freeze_touch_baseline.sh  gen_drop_grid.py  kill_all.sh  monitor_attach_publishers.sh  object_positions.json  panel_block_smoke_test.sh  panel_perf_compare.py  panel_perf_measure.py  prune_startup_evidence.sh  repro_release_objects_idempotent.sh  ros2_bringup_checklist.sh  run_daily_stack.sh  run_panel_objectstate_check.sh  run_touch_tuner_front_left.sh  run_touch_tuner_front_right.sh  show_latest_startup_evidence.sh  start_panel_v2.sh  start_panel_v2_venv.sh  start_panel_with_xvfb.sh  status_panel_v2.sh  stop_panel_v2.sh  sync_object_positions_to_sdf.py  table_pixel_map.json  tfm_smoketest.py  (+5 more)
agarre_ros2_ws/src/tfm_grasping/: package.xml  setup.cfg  setup.py
agarre_ros2_ws/src/tfm_grasping/resource/: tfm_grasping
agarre_ros2_ws/src/tfm_grasping/test/: conftest.py  test_model_output_scaling.py
agarre_ros2_ws/src/tfm_grasping/tfm_grasping/: __init__.py  config.py  geometry.py  grasp_inference.py  grasp_module.py  model.py  perception.py  ros_interface.py
agarre_ros2_ws/src/ur5_bringup/: CMakeLists.txt  package.xml
agarre_ros2_ws/src/ur5_bringup/config/: system_state_manager.yaml  ur5_mock_controllers.yaml
agarre_ros2_ws/src/ur5_bringup/launch/: ur5_ros2_control.launch.py  ur5_rsp.launch.py  ur5_stack.launch.py
agarre_ros2_ws/src/ur5_description/: CMakeLists.txt  package.xml
agarre_ros2_ws/src/ur5_description/config/: ur5_controllers.yaml
agarre_ros2_ws/src/ur5_description/urdf/: ur5.urdf.xacro
agarre_ros2_ws/src/ur5_moveit_config/: CMakeLists.txt  package.xml
agarre_ros2_ws/src/ur5_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  planning_scene_monitor_parameters.yaml  ur5.srdf
agarre_ros2_ws/src/ur5_moveit_config/launch/: ur5_moveit_bringup.launch.py
agarre_ros2_ws/src/ur5_panel_interfaces/: CMakeLists.txt  package.xml
agarre_ros2_ws/src/ur5_qt_panel/: package.xml  setup.cfg  setup.py
agarre_ros2_ws/src/ur5_qt_panel/config/: panel_settings.yaml  panel_test_tuning.yaml
agarre_ros2_ws/src/ur5_qt_panel/test/: conftest.py  test_copyright.py  test_flake8.py  test_panel_utils.py  test_pep257.py  test_state_machine.py
agarre_ros2_ws/src/ur5_qt_panel/ur5_qt_panel/: __init__.py  calibration_service.py  cameras_tab.py  logging_utils.py  panel_calibration.py  panel_camera_helpers.py  panel_config.py  panel_controllers.py  panel_env.py  panel_external_state.py  panel_fatal.py  panel_launch_control.py  panel_launchers.py  panel_motion_helpers.py  panel_moveit_flow.py  panel_moveit_publishers.py  panel_moveit_ready.py  panel_moveit_wait.py  panel_objects.py  panel_physics.py  panel_pick_demo.py  panel_pick_object.py  panel_process.py  panel_readiness.py  panel_robot_presets.py  panel_ros.py  panel_ros_publishers.py  panel_safety.py  panel_settings.py  panel_shutdown.py  panel_startup.py  panel_state.py  panel_state_machine.py  panel_tf.py  panel_tf_diagnose.py  panel_tf_monitor.py  panel_tfm.py  panel_ui_state.py  panel_utils.py  panel_v2.py  (+4 more)
agarre_ros2_ws/src/ur5_tools/: package.xml  setup.cfg  setup.py
agarre_ros2_ws/src/ur5_tools/test/: conftest.py  test_copyright.py  test_flake8.py  test_moveit_bridge_plan_success.py  test_pep257.py  test_system_state_machine.py
agarre_ros2_ws/src/ur5_tools/ur5_tools/: __init__.py  clock_probe.py  controller_bootstrap.py  gripper_attach_backend.py  gz_pose_bridge.py  gz_ros_control_guard.py  jt_smoke_test.py  param_utils.py  planning_scene_sync.py  release_objects_service.py  system_state_manager.py  tf_probe.py  ur5_moveit_bridge.py  world_tf_publisher.py
reports/: CORRESPONDENCIA_PDF_ARTEFACTOS_TFM.csv  CORRESPONDENCIA_PDF_ARTEFACTOS_TFM.md  INVENTARIO_ARTEFACTOS_TFM.md  README.md
(+210 files in other folders)
