<?xml version="1.0"?>
<!-- Ruta/archivo: agarre_ros2_ws/src/ur5_description/package.xml -->
<!-- Contenido: Descripcion URDF/Xacro y configuracion base del robot UR5. -->
<!-- Uso breve: Se usa al publicar el robot model y al preparar simulacion y MoveIt. -->

<!-- URL: /home/laboratorio/TFM/agarre_ros2_ws/src/ur5_description/package.xml -->
<!-- Summary: ROS 2 package manifest for ur5_description. -->
<package format="3">
  <name>ur5_description</name>
  <version>0.1.0</version>
  <description>UR5 robot description (URDF/Xacro and controllers config).</description>
  <maintainer email="laboratorio@example.com">laboratorio</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
