<?xml version="1.0"?>
<!-- Ruta/archivo: agarre_ros2_ws/src/ur5_qt_panel/package.xml -->
<!-- Contenido: Codigo del panel Qt y de la logica ROS 2 asociada al UR5. -->
<!-- Uso breve: Se usa en build con colcon y en ejecucion mediante el entry point panel_v2. -->

<!-- URL: /home/laboratorio/TFM/agarre_ros2_ws/src/ur5_qt_panel/package.xml -->
<!-- Summary: ROS 2 package manifest for ur5_qt_panel. -->
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur5_qt_panel</name>
  <version>0.0.0</version>
  <description>Qt panel for UR5 simulation control, cameras, and evidence capture.</description>
  <maintainer email="jesus.lozano.rodriguez@gmail.com">laboratorio</maintainer>
  <license>MIT</license>

  <depend>geometry_msgs</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>rosgraph_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>controller_manager_msgs</depend>
  <depend>control_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>tfm_grasping</depend>
  <depend>ur5_panel_interfaces</depend>

  <exec_depend>python3-pyqt5</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-psutil</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
