# Ruta/archivo: agarre_ros2_ws/src/ur5_qt_panel/setup.cfg
# Contenido: Codigo del panel Qt y de la logica ROS 2 asociada al UR5.
# Uso breve: Se usa en build con colcon y en ejecucion mediante el entry point panel_v2.
# URL: /home/laboratorio/TFM/agarre_ros2_ws/src/ur5_qt_panel/setup.cfg
# Summary: Setuptools script install locations for ur5_qt_panel.
[develop]
script_dir = $base/lib/ur5_qt_panel
[install]
install_scripts = $base/lib/ur5_qt_panel

[options.entry_points]
console_scripts =
    ur5_qt_panel = ur5_qt_panel.panel_v2:main

[flake8]
max-line-length = 120
ignore = C, D, E, F, I, Q, W

[pydocstyle]
add-ignore = D102, D107
