<?xml version="1.0"?>
<!-- Ruta/archivo: agarre_ros2_ws/src/ur5_tools/package.xml -->
<!-- Contenido: Codigo de herramientas, bridges y servicios auxiliares del stack UR5. -->
<!-- Uso breve: Se usa en build con colcon y como nodos/servicios ROS 2 del sistema. -->

<!-- URL: /home/laboratorio/TFM/agarre_ros2_ws/src/ur5_tools/package.xml -->
<!-- Summary: ROS 2 package manifest for ur5_tools. -->
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur5_tools</name>
  <version>0.0.0</version>
  <description>Utilities and helper nodes for UR5 simulation (MoveIt bridge, release service).</description>
  <maintainer email="jesus.lozano.rodriguez@gmail.com">laboratorio</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>moveit_py</depend>
  <depend>ament_index_python</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>ros_gz_interfaces</depend>
  <depend>shape_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rosgraph_msgs</depend>
  <depend>controller_manager_msgs</depend>
  <depend>std_srvs</depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
