# Ruta/archivo: agarre_ros2_ws/src/ur5_tools/setup.cfg
# Contenido: Codigo de herramientas, bridges y servicios auxiliares del stack UR5.
# Uso breve: Se usa en build con colcon y como nodos/servicios ROS 2 del sistema.
# URL: /home/laboratorio/TFM/agarre_ros2_ws/src/ur5_tools/setup.cfg
# Summary: Setuptools script install locations for ur5_tools.
[develop]
script_dir=$base/lib/ur5_tools
[install]
install_scripts=$base/lib/ur5_tools

[options.entry_points]
console_scripts =
    ur5_moveit_bridge = ur5_tools.ur5_moveit_bridge:main
    release_objects_service = ur5_tools.release_objects_service:main

[flake8]
max-line-length = 120
extend-ignore = E203, W503

[pydocstyle]
add-ignore = D102, D107
